# ALEN

./: .gitignore  ADVANCED_FEATURES.md  ADVANCED_FEATURES_COMPLETE.md  AI_DRIVEN_RESPONSES.md  API_DOCUMENTATION.md  API_TEST_RESULTS.md  BROWSER_CACHE_FIX.md  BUG_FIXES_CRITICAL.md  BUG_FIXES_IMPLEMENTED.md  BUG_FIXES_PLAN.md  CHAT_GUIDE.md  CHAT_INTERFACE_FIXED.md  CLARIFICATION_NO_HARDCODED_RESPONSES.md  COMPILATION_STATUS.md  COMPILATION_SUCCESS.md  COMPLETE_SYSTEM_ANALYSIS.md  COMPLETE_SYSTEM_FINAL.md  COMPLETE_SYSTEM_SUMMARY.md  COMPREHENSIVE_UPDATE_SUMMARY.md  CONVERSATIONAL_AI_COMPLETE.md  CONVERSATION_TEST_RESULTS.md  CREATIVITY_INCREASE_REPORT.md  Cargo.toml  DATA_FLOW_DIAGRAM.md  DEPLOYMENT_COMPLETE.md  EMOTION_SYSTEM.md  ENGINEERING_FIXES_SUMMARY.md  ENHANCED_WEB_SUMMARY.md  EPISTEMIC_REWARD_TEST.md  EXPLANATION_ENGINE_COMPLETE.md  EXPLANATION_ENGINE_IMPLEMENTATION_PLAN.md  FEATURE_VERIFICATION.md  FEEDBACK_SYSTEM_COMPLETE.md  FINAL_ARCHITECTURE_NO_HARDCODING.md  FINAL_COMPLETE_SYSTEM.md  FINAL_STATUS.md  FINAL_STATUS_NO_HARDCODING.md  FINAL_SUMMARY.md  FINAL_TRAINING_REPORT.md  FINAL_UI_COMPLETE.md  (+112 more)
data/: advanced_questions.json  all_training_combined.json  comprehensive_test_data.json  multimedia_training.json  training_data.json  training_data_2.json  training_data_3.json
docs/: ADVANCED_NEURAL_ARCHITECTURE.md  HUMAN_READABLE_REASONING.md  NEURAL_IMPROVEMENTS_SUMMARY.md  QUICK_START_ADVANCED.md  SELF_DISCOVERY_LOOP.md
examples/: advanced_testing.rs  chat_with_alen.rs  complete_training_test.rs  comprehensive_training.rs  comprehensive_training.sh  demo_advanced_neural.py  (+26 more)
(+193 files in other folders)
